Set target requirenment for ex-6

--- a/2021/CMakeLists.txt
+++ b/2021/CMakeLists.txt
@@ -2,9 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 
 project(2021)
 
+
 add_executable(ex-1 ex-1/solution.c)
 add_executable(ex-2 ex-2/solution.c)
 add_executable(ex-3 ex-3/solution.c)
 add_executable(ex-4-1 ex-4/solution-1.c)
 add_executable(ex-4-2 ex-4/solution-2.c)
 add_executable(ex-5 ex-5/solution.c)
+add_executable(ex-6 ex-6/solution.c)
+
+set_property(TARGET ex-6 PROPERTY C_STANDARD 23)
